--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-easy-chart": "^1.0.0",
+    "react-scripts": "2.1.5",
+    "axios": "0.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
